fix(Matte): made inclusive scrollbar positioning

--- a/Matte/user.css
+++ b/Matte/user.css
@@ -345,12 +345,10 @@
     border-radius: var(--scrollbar-border-radius);
     width: var(--scrollbar-width-hover);
 }
-.spotify__container--is-desktop.spotify__os--is-windows
-    .main-view-container__scroll-node
-    > .os-scrollbar-vertical {
+.main-view-container__scroll-node > .os-scrollbar-vertical {
     /* fix scrollbar positioning */
-    top: 5px;
-    right: 5px;
+    top: 5px !important;
+    right: 5px !important;
 }
 .os-scrollbar-handle {
     /* increase size from right to left */
